--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 aiofiles==23.2.1
 aiogram==3.3.0
-aiohttp==3.9.1
+aiohttp==3.9.3
 aiosignal==1.3.1
 annotated-types==0.6.0
+asyncio==3.4.3
 attrs==23.2.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
@@ -18,5 +19,5 @@ pydantic_core==2.14.6
 python-dotenv==1.0.1
 requests==2.31.0
 typing_extensions==4.9.0
-urllib3==2.1.0
+urllib3==2.2.0
 yarl==1.9.4
